-Added upload meme and meme activity

--- a/MachineProject_HotnSpicyMemes/app/src/main/AndroidManifest.xml
+++ b/MachineProject_HotnSpicyMemes/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MachineProject_HotnSpicyMemes">
-        <activity android:name=".RegistrationActivity"></activity>
+        <activity android:name=".UploadMeme"></activity>
+        <activity android:name=".MemeActivity" />
+        <activity android:name=".RegistrationActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,10 +19,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
